testsuite/tests/typecheck/should_fail/tcfail044.stderr

tcfail044.hs:6:20: error: [GHC-48406]
    • Illegal instance declaration for ‘Eq (a -> a)’:
        All instance types must be of the form (T a1 ... an)
        where a1 ... an are *distinct type variables*,
        and each type variable appears at most once in the instance head.
    • In the instance declaration for ‘Eq (a -> a)’
    Suggested fix:
      Perhaps you intended to use the ‘FlexibleInstances’ extension

tcfail044.hs:9:21: error: [GHC-48406]
    • Illegal instance declaration for ‘Num (a -> a)’:
        All instance types must be of the form (T a1 ... an)
        where a1 ... an are *distinct type variables*,
        and each type variable appears at most once in the instance head.
    • In the instance declaration for ‘Num (a -> a)’
    Suggested fix:
      Perhaps you intended to use the ‘FlexibleInstances’ extension
